# LLMDeployer

./: .gitignore  cleanup_servers.py  kill_zombie_models.py  pyproject.toml  readme.md  requirement.txt  requirements.txt  run_api.pid  run_api.py
docs/vllm/: params_of_vllm.md
resources/vllm_models/Qwen/: Qwen2.5-0.5B-Instruct.yaml  Qwen2.5-0.5B.yaml  Qwen2.5-14B-Instruct.yaml  Qwen2.5-7B-Instruct.yaml  Qwen3-0.6B.yaml  Qwen3-14B.yaml  Qwen3-4B.yaml  Qwen3-8B.yaml  Qwen3-Embedding-0.6B.yaml  Qwen3-Embedding-4B.yaml  Qwen3-Embedding-8B.yaml
resources/vllm_models/meta-llama/: Llama-3.1-8B-Instruct.yaml
resources/vllm_models/mistralai/: Mistral-7B-Instruct-v0.3.yaml
sbatch_script/: run_api_server.sbatch
src/models/: model_launch.py  vllm_loader.py
src/utils/: config_utils.py  enviroment_utils.py  gpu_utils.py  log_config.py  model_registry.py  modelscope_utils.py  process_utils.py  system_utils.py  yaml_utils.py
src/web/: app.py  multi_model_utils.py
src/web/static/: admin.css
src/web/templates/: admin.html
tests/: chat.py  gpu_select.py  load_vllm_model.py  load_vllm_model_server.py  run_app.py  test_process_termination.py
